--- a/main-pipeline/pipeline.yml
+++ b/main-pipeline/pipeline.yml
@@ -18,12 +18,9 @@ variables:
   templateFile: 'main.bicep'
 
 steps:
-    - task: AzureCLI@2
-      inputs:
-        azureSubscription: 'azuresub'
-        scriptType: 'batch'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          az --version
-          az group create --name $(resourceGroupName) --location $(location)
-          az deployment group create --resource-group $(resourceGroupName) --template-file $(templateFile)
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'azuresub'
+    scriptType: 'batch'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'az --version'
