Update pipeline.yml for Azure Pipelines

--- a/main-pipeline/pipeline.yml
+++ b/main-pipeline/pipeline.yml
@@ -23,4 +23,7 @@ steps:
         azureSubscription: 'azuresub'
         scriptType: 'batch'
         scriptLocation: 'inlineScript'
-        inlineScript: 'az --version'
+        inlineScript: |
+          az --version
+          az group create --name $(resourceGroupName) --location $(location)
+          az deployment group create --resource-group $(resourceGroupName) --template-file $(templateFile)
